2010-06-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix minor testsuite issues, update docs, for Yacc/Lex changes.
	* doc/automake.texi (Yacc and Lex): Mention AM_YFLAGS, YFLAGS
	and AM_LFLAGS, LFLAGS in the order in which they now appear in
	the rules.
	* NEWS: Update.
	* tests/lflags.test, tests/lflags2.test, tests/yflags.test,
	tests/yflags2.test: Prefer `make -e' over `make VAR=VAL', to
	please maintainer-check.  Ensure generated C files contain a
	declaration, to please compilers.

2010-06-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix bugs in Automake Yacc/Lex support w.r.t. $(AM_FLAGS) and
	$(FLAGS) precedence.
	* automake.in: Fix registration of languages "Lex", "Lex (C++)",
	"Yacc" and "Yacc (C++)", so that $(LFLAGS) has precedence over
	$(AM_LFLAGS) and $(YFLAGS) has precedence over $(AM_YFLAGS).
	* tests/Makefile.am (XFAIL_TESTS): Updated accordingly.
	* NEWS: Updated.

	New tests, exposing bugs in Automake Yacc/Lex support w.r.t.
	$(AM_FLAGS) and $(FLAGS) precedence.
	* tests/lflags.test: New test, check that user $(LFLAGS) takes
	precedence over automake (AM_LFLAGS) and (foo_LFLAGS).  Still
	xfailing.
	* tests/lflags2.test: Likewise.
	* tests/yflags.test: New test, check that user $(YFLAGS) takes
	precedence over automake (AM_YFLAGS) and (foo_YFLAGS).  Still
	xfailing.
	* tests/yflags2.test: Likewise.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Extended accordingly.

2010-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Modernize, improve and extend tests `suffix*.test'.
	* tests/suffix3.test: Enable `errexit' shell flag, and related
	changes.
	* tests/suffix4.test: Likewise.
	* tests/suffix6.test: Likewise, and do not create a useless dummy
	source file.
	* tests/suffix7.test: Likewise.
	* tests/suffix5.test: Enable `errexit' shell flag, and related
	changes.  Make grepping of Makefile.in slighty stricter.
	* tests/suffix.test: Enable `errexit' shell flag, and related