@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2010 Free Software Foundation, Inc.
+# Copyright (C) 2010, 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -30,6 +30,10 @@ echo '/*' "$*" '*/' >y.tab.c
 echo 'extern int dummy;' >> y.tab.c
 END
 chmod a+x fake-yacc
+
+# Remove Yacc from the environment, so that it won't interfere
+# with `make -e' below.
+unset YACC || :
 
 cat >> configure.in <<'END'
 AC_PROG_CXX
