@@ -1,3 +1,10 @@
+2011-01-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failures in yflags*.test
+	* tests/yflags.test: Remove 'YACC' from the environment, so
+	that it won't be erroneously picked up by `make -e'.
+	* tests/yflags2.test: Likewise.
+
 2010-06-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix minor testsuite issues, update docs, for Yacc/Lex changes.
